fix spacing

--- a/estate-complexes-redesign/css/annonce-page-daily.scss
+++ b/estate-complexes-redesign/css/annonce-page-daily.scss
@@ -298,8 +298,10 @@
   }
 
   .apartment-top-container {
-    display: flex;
     margin-bottom: 15px;
+    @media (max-width: 767px) {
+      margin-bottom: 7.5px;
+    }
   }
   .description-container {
     margin-top: 15px;
@@ -406,6 +408,12 @@
   flex-direction: column;
   gap: 15px;
   margin-bottom: 15px;
+  margin-top: 15px;
+
+  @media (max-width: 767px) {
+    margin-top: 7.5px;
+    margin-bottom: 7.5px;
+  }
 
   .rules-layout-col-2 {
     display: grid;
